--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <input id="btn" type="submit" value="Login">
 
-            <p>Don't have a account? <a href="/Animated-Login-Form/register.html">Register</a></p>
+            <p>Don't have a account? <a href="register.html">Register</a></p>
 
         </form>
     </div>
