--- a/register.html
+++ b/register.html
@@ -13,6 +13,10 @@
     align-items: center;
     min-height: 100vh;
     margin: 0;
+    background-image:https://www.shutterstock.com/search/login-background-image;
+      background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center;
   }
   .signup-container {
     background-color: #fff;
