--- a/register.html
+++ b/register.html
@@ -13,17 +13,19 @@
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-image:https://www.shutterstock.com/search/login-background-image;
-      background-size:cover;
-    background-repeat:no-repeat;
-    background-position:center;
+    background-image: url('https://img.freepik.com/free-vector/gradient-ui-ux-background_23-2149052117.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .signup-container {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.95); /* Slight transparency */
     border: 1px solid #ddd;
     padding: 40px 30px;
     text-align: center;
     width: 300px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
   }
   .signup-container h1 {
     font-family: 'Segoe UI', sans-serif;
@@ -59,14 +61,6 @@
   .signup-container a {
     color: #00376b;
     text-decoration: none;
-  }
-  .gender-options {
-    text-align: left;
-    margin: 10px 0;
-  }
-  .gender-options label {
-    margin-right: 10px;
-    font-size: 14px;
   }
 </style>
 </head>
